--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,58 +20,32 @@ jobs:
       - add_ssh_keys:
           fingerprints:
             - ${HETZNER_SSH_KEY_FINGERPRINT}
+      # Add SSH config to prefer ed25519
       - run:
-          name: Debug SSH Setup
+          name: Setup SSH Config
           command: |
-            # List available keys
-            echo "Available SSH keys:"
-            ls -la ~/.ssh/
-            
-            # Get key fingerprint
-            echo "SSH key fingerprint:"
-            ssh-keygen -E md5 -lf ~/.ssh/id_ed25519 || true
+            mkdir -p ~/.ssh
+            echo "Host *
+              IdentityFile ~/.ssh/id_ed25519
+              PreferredAuthentications publickey
+              PubkeyAcceptedKeyTypes ssh-ed25519" > ~/.ssh/config
+            chmod 600 ~/.ssh/config
       - run:
           name: Test SSH Connection
           command: |
             echo "Testing SSH connection..."
-            ssh -v -o StrictHostKeyChecking=no \
-              -i ~/.ssh/id_ed25519 \
-              ${HETZNER_DEPLOY_USER}@${HETZNER_VPS_HOST} 'echo "SSH connection successful"'
+            ssh -v -o StrictHostKeyChecking=no ${HETZNER_DEPLOY_USER}@${HETZNER_VPS_HOST} 'echo "SSH connection successful"'
       - run:
           name: Create production env file
-          no_output_timeout: 1m
           command: |
             echo "Creating .env file on remote server..."
-            # First check if directory exists
-            ssh -o StrictHostKeyChecking=no ${HETZNER_DEPLOY_USER}@${HETZNER_VPS_HOST} '
-              if [ ! -d "/home/rekkoo/web" ]; then
-                echo "Directory does not exist"
-                exit 1
-              fi
-              echo "Directory exists"
-            '
-            
-            # Create env file with timeout
-            timeout 30s ssh -v -o StrictHostKeyChecking=no ${HETZNER_DEPLOY_USER}@${HETZNER_VPS_HOST} "touch /home/rekkoo/web/.env"
-            echo "VITE_API_URL=${VITE_API_URL}" > temp.env
-            timeout 30s scp -v -o StrictHostKeyChecking=no temp.env ${HETZNER_DEPLOY_USER}@${HETZNER_VPS_HOST}:/home/rekkoo/web/.env
-            rm temp.env
-            
-            # Verify file was created
-            ssh -o StrictHostKeyChecking=no ${HETZNER_DEPLOY_USER}@${HETZNER_VPS_HOST} 'cat /home/rekkoo/web/.env'
+            echo "VITE_API_URL=${VITE_API_URL}" | ssh -o StrictHostKeyChecking=no ${HETZNER_DEPLOY_USER}@${HETZNER_VPS_HOST} 'cat > /home/rekkoo/web/.env'
             echo ".env file created successfully"
-      - run:
-          name: Build Docker image
-          command: |
-            echo "Building Docker image..."
-            docker build -t rekkoo-app \
-              --build-arg VITE_API_URL=${VITE_API_URL} .
-            echo "Docker image built successfully"
       - run:
           name: Debug Deploy to Hetzner
           command: |
             echo "Starting deployment to Hetzner..."
-            ssh -v -o StrictHostKeyChecking=no ${HETZNER_DEPLOY_USER}@${HETZNER_VPS_HOST} '
+            ssh -o StrictHostKeyChecking=no ${HETZNER_DEPLOY_USER}@${HETZNER_VPS_HOST} '
               set -x
               cd /home/rekkoo/web && \
               echo "Current directory: $(pwd)" && \
