--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,6 @@ version: 2.1
 
 orbs:
   slack: circleci/slack@4.12.5
-  docker: circleci/docker@2.1.1
 
 executors:
   node-docker:
@@ -18,10 +17,9 @@ jobs:
       - checkout
       - setup_remote_docker:
           docker_layer_caching: true
-      # Fixed Docker authentication
       - run:
           name: Docker Login
-          command: echo $DOCKER_PASSWORD | docker login -u $DOCKER_USER --password-stdin
+          command: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
       - run:
           name: Build and Push Docker image
           command: |
@@ -55,9 +53,7 @@ jobs:
           name: Deploy to Hetzner
           command: |
             echo "Starting deployment to Hetzner..."
-            # Export the image name for docker-compose
             export DOCKER_IMAGE="${DOCKER_USER}/rekkoo-app:${CIRCLE_SHA1}"
-            # Pass the image name to the remote server
             ssh -o StrictHostKeyChecking=no ${HETZNER_DEPLOY_USER}@${HETZNER_VPS_HOST} "
               export DOCKER_IMAGE=${DOCKER_IMAGE} && \
               cd /home/rekkoo/web && \
