more docker login errors

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,9 @@ jobs:
           docker_layer_caching: true
       - run:
           name: Docker Login
-          command: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+          command: |
+            mkdir -p /home/circleci/.docker
+            echo "{\"auths\":{\"https://index.docker.io/v1/\":{\"auth\":\"$(echo -n $DOCKER_USER:$DOCKER_PASSWORD | base64)\"}}}" > /home/circleci/.docker/config.json
       - run:
           name: Build and Push Docker image
           command: |
