--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,49 +18,49 @@ jobs:
       - setup_remote_docker:
           docker_layer_caching: true
       - run:
-          name: Docker Login
+          name: Build Docker image
           command: |
-            mkdir -p /home/circleci/.docker
-            echo "{\"auths\":{\"https://index.docker.io/v1/\":{\"auth\":\"$(echo -n $DOCKER_USER:$DOCKER_PASSWORD | base64)\"}}}" > /home/circleci/.docker/config.json
-      - run:
-          name: Build and Push Docker image
-          command: |
-            # Build the image
-            docker build -t ${DOCKER_USER}/rekkoo-app:${CIRCLE_SHA1} \
+            echo "Building Docker image..."
+            docker build -t rekkoo-app:${CIRCLE_SHA1} \
               --build-arg VITE_API_URL=${VITE_API_URL} .
-            # Push to Docker Hub
-            docker push ${DOCKER_USER}/rekkoo-app:${CIRCLE_SHA1}
-            # Tag as latest
-            docker tag ${DOCKER_USER}/rekkoo-app:${CIRCLE_SHA1} ${DOCKER_USER}/rekkoo-app:latest
-            docker push ${DOCKER_USER}/rekkoo-app:latest
+            docker tag rekkoo-app:${CIRCLE_SHA1} rekkoo-app:latest
+      - run:
+          name: Save Docker image
+          command: |
+            echo "Saving Docker image..."
+            mkdir -p /tmp/docker-images
+            docker save rekkoo-app:latest | gzip > /tmp/docker-images/rekkoo-app.tar.gz
       - add_ssh_keys:
           fingerprints:
             - ${HETZNER_SSH_KEY_FINGERPRINT}
       - run:
-          name: Create production env file
+          name: Copy files to server
           command: |
-            echo "Creating .env file on remote server..."
-            echo "VITE_API_URL=${VITE_API_URL}" | ssh -o StrictHostKeyChecking=no ${HETZNER_DEPLOY_USER}@${HETZNER_VPS_HOST} 'cat > /home/rekkoo/web/.env'
-            echo ".env file created successfully"
-      - run:
-          name: Copy Docker Compose files
-          command: |
-            echo "Copying Docker Compose files..."
+            echo "Creating directories on remote server..."
             ssh -o StrictHostKeyChecking=no ${HETZNER_DEPLOY_USER}@${HETZNER_VPS_HOST} 'mkdir -p /home/rekkoo/web'
+            
+            echo "Copying Docker image and config files..."
             scp -o StrictHostKeyChecking=no \
+              /tmp/docker-images/rekkoo-app.tar.gz \
               docker-compose.yml \
               docker-compose.prod.yml \
               ${HETZNER_DEPLOY_USER}@${HETZNER_VPS_HOST}:/home/rekkoo/web/
+            
+            echo "Creating .env file..."
+            echo "VITE_API_URL=${VITE_API_URL}" | ssh -o StrictHostKeyChecking=no ${HETZNER_DEPLOY_USER}@${HETZNER_VPS_HOST} 'cat > /home/rekkoo/web/.env'
       - run:
           name: Deploy to Hetzner
           command: |
             echo "Starting deployment to Hetzner..."
-            export DOCKER_IMAGE="${DOCKER_USER}/rekkoo-app:${CIRCLE_SHA1}"
             ssh -o StrictHostKeyChecking=no ${HETZNER_DEPLOY_USER}@${HETZNER_VPS_HOST} "
-              export DOCKER_IMAGE=${DOCKER_IMAGE} && \
               cd /home/rekkoo/web && \
-              docker compose -f docker-compose.yml -f docker-compose.prod.yml pull && \
+              echo 'Loading Docker image...' && \
+              gunzip -c rekkoo-app.tar.gz | docker load && \
+              echo 'Starting containers...' && \
               docker compose -f docker-compose.yml -f docker-compose.prod.yml up -d && \
+              echo 'Cleaning up...' && \
+              rm rekkoo-app.tar.gz && \
+              echo 'Container status:' && \
               docker compose -f docker-compose.yml -f docker-compose.prod.yml ps
             "
             echo "Deployment completed"
@@ -80,7 +80,6 @@ workflows:
             - hetzner-deploy-secrets
             - slack-secrets
             - rekkoo-secrets
-            - do-secrets
           filters:
             branches:
               only: main
